--- a/member-page.html
+++ b/member-page.html
@@ -91,9 +91,9 @@
     <div class="inner-banner ">
         <!-- <img src="images/trail/title-bg.jpg" alt="img"> -->
         <img src="images/trail/nta-banner-fb.webp" alt="img">
-        <div class="inner-banner__navbar d-flex align-items-center">
-            <div class="container">
-                <div class="bg-breadcrumd w-75">
+        <div class="inner-banner__navbar member-page d-flex align-items-center">
+            <div class="container position-relative">
+                <div class="bg-breadcrumd w-75 pe-lg-5">
                     <h1 class="text-white mb-3">Nepal Trak Adventure & Expedition</h1>
                     <!-- <nav aria-label="breadcrumb">
                         <ol class="breadcrumb ">
@@ -103,6 +103,14 @@
                             </li>
                         </ol>
                     </nav> -->
+                </div>
+                <div class="quick-view d-flex align-items-center">
+                    <div class="quick-detail me-3">
+                        <a href="#photo-gallery"><i class="fa-regular fa-image"></i> Gallery <br> <span>20 Photos</span></a>
+                    </div>
+                    <div class="quick-detail ">
+                        <a href="#related-packages"><i class="fa-brands fa-hive"></i> Total Packages <br> <span>20 Package</span></a>
+                    </div>
                 </div>
 
             </div>
