--- a/trail-package-details.html
+++ b/trail-package-details.html
@@ -95,7 +95,7 @@
         <!-- <img src="images/trail/title-bg.jpg" alt="img"> -->
         <img src="images/trail/Mount_Everest_as_seen_from_Drukair2_PLW_edit.jpg" alt="img">
         <div class="inner-banner__navbar d-flex align-items-center">
-            <div class="container">
+            <div class="container position-relative">
                 <div class="bg-breadcrumd w-75">
                     <h1 class="text-white mb-3">Everest Base Camp Trek with Helicopter Return</h1>
                     <nav aria-label="breadcrumb">
@@ -107,6 +107,14 @@
                             </li>
                         </ol>
                     </nav>
+                </div>
+                <div class="quick-view d-flex align-items-center">
+                    <div class="quick-detail me-3">
+                        <a href="#photo-gallery"><i class="fa-regular fa-image"></i> Gallery <br> <span>20 Photos</span></a>
+                    </div>
+                    <div class="quick-detail ">
+                        <a href="#related-packages"><i class="fa-brands fa-hive"></i> Total Packages <br> <span>20 Package</span></a>
+                    </div>
                 </div>
 
             </div>
@@ -504,7 +512,7 @@
                                         <img src="images/trail/trip-map.webp" width="100%" alt="map" />
                                     </a>
                                 </div>
-                                <h2 class="my-4">
+                                <h2 class="my-4" id="photo-gallery">
                                     Photos & Vidos
                                 </h2>
                                 <p>Each image tells a unique story, inviting us into a world of emotion, beauty, and
@@ -727,8 +735,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="main-content__sidebar sidebar sidebar-border trail-details-sidebar ">
-                        <h3>Other Package </h3>
+                    <div class="main-content__sidebar sidebar sidebar-border trail-details-sidebar " >
+                        <h3>Related Package </h3>
                         <div class="sidebar__package p-4">
                             <ul class="posts blog withthumb ">
                                 <li class="mb-3">
@@ -780,7 +788,7 @@
 
                     </div>
                 </div>
-                <div class="trail-packages">
+                <div class="trail-packages" id="related-packages">
                     <div class="row g-4">
                         <div class="col-lg-12">
                             <div class="section__title text-start w-100">
