--- a/package-details.html
+++ b/package-details.html
@@ -56,7 +56,7 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="trail.profile.html" target="_blank">Trail Profile</a></li>
                   <li><a class="dropdown-item" href="trail-details.html" target="_blank">Everest Base Camp Trek</a></li>
-                  <li><a class="dropdown-item" href="package-details.html" target="_blank">Everest Base Camp Trek Detail</a></li>
+                  <li><a class="dropdown-item" href="trail-package-details.html" target="_blank">Everest Base Camp Trek Detail</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -88,7 +88,7 @@
         <!-- <img src="images/trail/title-bg.jpg" alt="img"> -->
         <img src="images/trail/3.jpg" alt="img">
         <div class="inner-banner__navbar d-flex align-items-center">
-            <div class="container">
+            <div class="container position-relative">
                 <div class="bg-breadcrumd w-75">
                     <h1 class="text-white mb-3">Everest Base Camp <br> Helicopter Tour</h1>
                     <nav aria-label="breadcrumb">
@@ -100,6 +100,15 @@
                         </ol>
                     </nav>
                 </div>
+                <div class="quick-view d-flex align-items-center">
+                    <div class="quick-detail me-3">
+                        <a href="#photo-gallery"><i class="fa-regular fa-image"></i> Gallery <br> <span>20 Photos</span></a>
+                    </div>
+                    <div class="quick-detail ">
+                        <a href="#related-packages"><i class="fa-brands fa-hive"></i> Total Packages <br> <span>20 Package</span></a>
+                    </div>
+                </div>
+             
             </div>
         </div>
     </div>
@@ -497,13 +506,16 @@
                                         <img src="images/trail/trip-map.webp" width="100%" alt="map" />
                                     </a>
                                 </div>
-                                <h2 class="my-4">
+                                <h2 class="my-4" id="photo-gallery">
                                     Photos & Vidos
                                 </h2>
                                 <p>Each image tells a unique story, inviting us into a world of emotion, beauty, and
                                     complexity. Get ready to be moved, inspired, and challenged as we journey through
                                     this captivating collection of image</p>
-                                <div class="photo-video">
+                                    <p>Each image tells a unique story, inviting us into a world of emotion, beauty, and
+                                        complexity. Get ready to be moved, inspired, and challenged as we journey through
+                                        this captivating collection of image</p>
+                                <div class="photo-video" >
                                     <div class="row g-2">
                                         <div class="col-lg-4">
                                             <a data-fancybox="gallery" data-src="https://lipsum.app/id/3/1600x1200">
@@ -808,12 +820,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="trail-packages">
+                <div class="trail-packages" id="related-packages">
                     <div class="row g-4">
                         <div class="col-lg-12">
                             <div class="section__title text-start w-100">
                                 <h3>
-                                  Everest Packages
+                                  Related Packages
                                   </h1>
                               </div>
                         </div>
@@ -1019,6 +1031,7 @@
 
         });
     </script>
+    
     <script>
         $('.owl-section-trail').owlCarousel({
             loop: true,
