--- a/package-details.html
+++ b/package-details.html
@@ -60,7 +60,7 @@
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link " href="introduction.html" role="button" >
+                <a class="nav-link " href="#" role="button" >
                   About us 
                 </a>
               </li>
