--- a/member.html
+++ b/member.html
@@ -59,11 +59,11 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="trail.profile.html" target="_blank">Trail Profile</a></li>
                   <li><a class="dropdown-item" href="trail-details.html" target="_blank">Everest Base Camp Trek</a></li>
-                  <li><a class="dropdown-item" href="package-details.html" target="_blank">Everest Base Camp Trek Detail</a></li>
+                  <li><a class="dropdown-item" href="trail-package-details.html" target="_blank">Everest Base Camp Trek Detail</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link " href="introduction.html" role="button" >
+                <a class="nav-link " href="#" role="button" >
                   About us 
                 </a>
               </li>
