home page changes

--- a/login.html
+++ b/login.html
@@ -89,7 +89,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-4">
-                <h1>Heading</h1>
+                <h1>Login page under construction</h1>
             </div>
         </div>
     </div>
