--- a/trail.profile.html
+++ b/trail.profile.html
@@ -90,7 +90,7 @@
     <!-- navbar end -->
     <div class="trail-profile  pb-lg-5">
         <div class="container">
-            <div class="row">
+            <div class="row ">
                 <div class="col-lg-7 col-md-10 col-12 mx-auto">
                     <h1 class="text-center py-lg-5 py-3">Looking For New Trail?</h1>
                     <div class="trail-profile--meta-search text-center">
@@ -156,7 +156,7 @@
                     <h4>Trail Packages</h4>
             </div> -->
             <div class="section-trail__details">
-                <div class="row gx-4 ">
+                <div class="row g-4 ">
                     <div class="col-lg-3 col-md-4 col-sm-6 col-12">
                         <a href="trail-details.html">
                             <div class="section-trail__details__list">
