--- a/index.html
+++ b/index.html
@@ -1099,17 +1099,29 @@
   <!-- taan support start -->
   <section class="taan-support my-lg-5 my-3">
     <div class="container">
-      <div class="support d-lg-flex flex-column flex-lg-row justify-content-center">
-        <div class="support-message">
-          <h3>Get Started by Speaking with our Support counsellors</h3>
-          <p>Our Taan Support are working from home, ready to help you stay open for business with answers and advice
-            24/7/365. Send your queries about trekking, Help or complain your trekking services.</p>
-          <button>Contact Us</button>
+      <div class="row">
+        <div class="col-lg-3">
+          <div class="trip-advisor">
+            <a href="https://www.tripadvisor.com/Attraction_Review-g293890-d6031354-Reviews-Nepal_Trek_Adventure_and_Expedition-Kathmandu_Kathmandu_Valley_Bagmati_Zone_Centr.html"><img src="https://media.nepaltrekadventures.com/themes/images/ta-widget.png" width="100%" alt="img">
+            </a>
+          </div>
         </div>
-        <div class="support-image d-flex justify-content-center p-2">
-          <img src="images/support-cover.png" alt="Support Contact Image">
+        <div class="col-lg-9">
+          <div class="support d-lg-flex flex-column flex-lg-row justify-content-center h-100">
+            <div class="support-message">
+              <h4>Get Started by Speaking with our Support counsellors</h4>
+              <p>Our Taan Support are working from home, ready to help you stay open for business with answers and advice
+                24/7/365. Send your queries about trekking, Help or complain your trekking services.</p>
+              <button>Contact Us</button>
+            </div>
+            <div class="support-image d-flex justify-content-center p-2">
+              <img src="images/support-cover.png" alt="Support Contact Image">
+            </div>
+          </div>
         </div>
       </div>
+      
+    
     </div>
   </section>
   <!-- taan support end-->
