--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </ul>
           </li> -->
           <li class="nav-item dropdown">
-            <a class="nav-link " href="#" role="button">
+            <a class="nav-link " href="about-us.html" role="button">
               About us
             </a>
           </li>
