--- a/trail-details.html
+++ b/trail-details.html
@@ -44,7 +44,7 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mx-lg-end mx-auto mb-2 mb-lg-0 d-flex justify-content-end">
               <li class="nav-item dropdown">
-                <a class="nav-link" href="member-page.html" role="button">
+                <a class="nav-link" href="membership.html" role="button">
                   Members <i class="fas fa-chevron-down dropdown-icon"></i>
                 </a>
                 <div class="dropdown-menu d-flex ">
@@ -68,8 +68,8 @@
                 </div>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link " href="trail.profile.html" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
+                <a class="nav-link " href="trail.profile.html" role="button" 
+                 >
                   Trail Profile <i class="fas fa-chevron-down dropdown-icon"></i>
                 </a>
                 <div class="dropdown-menu d-flex ">
@@ -128,7 +128,7 @@
                 </ul>
               </li> -->
               <li class="nav-item dropdown">
-                <a class="nav-link " href="#" role="button">
+                <a class="nav-link " href="about-us.html" role="button">
                   About us
                 </a>
               </li>
