--- a/package-details.html
+++ b/package-details.html
@@ -38,7 +38,7 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mx-lg-end mx-auto mb-2 mb-lg-0 d-flex justify-content-end">
               <li class="nav-item dropdown">
-                <a class="nav-link" href="member-page.html" role="button">
+                <a class="nav-link" href="membership.html" role="button">
                   Members <i class="fas fa-chevron-down dropdown-icon"></i>
                 </a>
                 <div class="dropdown-menu d-flex ">
@@ -62,8 +62,8 @@
                 </div>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link " href="trail.profile.html" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
+                <a class="nav-link " href="trail.profile.html" role="button" 
+                 >
                   Trail Profile <i class="fas fa-chevron-down dropdown-icon"></i>
                 </a>
                 <div class="dropdown-menu d-flex ">
@@ -122,7 +122,7 @@
                 </ul>
               </li> -->
               <li class="nav-item dropdown">
-                <a class="nav-link " href="#" role="button">
+                <a class="nav-link " href="about-us.html" role="button">
                   About us
                 </a>
               </li>
@@ -148,7 +148,7 @@
       </nav>
     <div class="inner-banner ">
         <!-- <img src="images/trail/title-bg.jpg" alt="img"> -->
-        <img src="images/trail/3.jpg" alt="img">
+        <img src="images/home-banner.png" alt="img">
         <div class="inner-banner__navbar d-flex align-items-center">
             <div class="container position-relative">
                 <div class="bg-breadcrumd w-75">
